# aurora-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  compiler  compiler.rs  main.aurora  main.oly  package.json  setup_openly.sh  vsc-extension-quickstart.md
LANGUAGE/: Cargo.toml
LANGUAGE/src/: build_pipeline.rs  config.rs  main.rs
LANGUAGE/src/codegen/: kernel.rs  mod.rs  storage.rs
LANGUAGE/src/parser/: ast.rs  mod.rs
OS/: aurora_kernel.elf  boot.S  linker.ld
OS/src/: lib.rs
open_lily_lang/src/: main.rs
open_lily_lang/src/lexer/: mod.rs
open_lily_lang/src/parser/: mod.rs
src/: build_pipeline.rs  config.rs  main.rs
src/ast/: mod.rs
src/codegen/: display.rs  mod.rs
src/parser/: tokenizer.rs
src/wrtr/: mod.rs
syntaxes/: aurora.tmLanguage.json
