[package]
name = "aurora"
version = "0.1.0"
edition = "2021"
authors = ["Maximiliano Flores <maximilianoflorescaceres2@gmail.com>"]
description = "Compilador nativo y soberano para Aurora OS"

[dependencies]
# Herramienta local y eficiente para parsear el bloque de configuración JSON de Aurora
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 

